--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,6 +11,22 @@ header, h1{
     font-family: 'Dosis', sans-serif; 
 }
 
+#aboutMe-h1 {
+    display: inline;
+}
+
+h2 {
+    display: inline;
+    position: relative;
+    float: right;
+    font-family: 'Dosis', sans-serif;
+    color: #63273E;
+}
+
+h2:hover {
+    color: burlywood;
+}
+
 /* All -Containers */
 .container{
     background-color: #fff;
@@ -23,6 +39,7 @@ p{
     text-indent: 30px;
 }
 
+/* ----------  Portfolio cards  ---------- */
 .card-links {
     color: black;
     text-decoration: none;
@@ -35,6 +52,10 @@ p{
 .card-links:visited {
     color: black;
 }
+
+.card:hover {
+    box-shadow: 11px 11px 9px darkgrey;
+ }
 
 /* All - footers */
 .footer{
@@ -52,15 +73,26 @@ p{
     width: 30%;
 }
 
+a.downloadRes {
+    font-family: 'Dosis', sans-serif;
+    text-decoration: none;
+    color: #63273E;
+    font-size: 25px;
+}
+
+a.downloadRes:hover {
+    color:burlywood;
+}
+
 /* ----------   Contact me page  ---------- */
 .fa {
-    padding: 10px;
-    font-size: 25px;
+    font-size: 35px;
     width: 25px;
     text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
-  }
+    margin: 3px 10px 0px 8px;
+    color: #63273E;
+}
   
   .fa:hover {
       opacity: 0.7;
