--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,6 +64,11 @@ p {
 }
 
 /* ----------  Portfolio cards  ---------- */
+.card-img, .card-img-bottom, .card-img-top {
+  width: 100%;
+  height: 100%;
+}
+
 .projectTitle {
   font-family: "Dosis";
   font-weight: 600;
@@ -97,8 +102,11 @@ a.gitLink:hover {
 }
 
 .DnDimage {
-  height: 103%;
-  margin-bottom: -22px;
+  margin-bottom: -26px;
+}
+
+.workoutTrackerImg {
+  margin-bottom: 10px;
 }
 
 /* All - footers */
